Fix links to privacy policy and terms and change the language on the index.html page that describes the openchain project certification
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="Introduction">
     <h2>Welcome</h2>
-    The OpenChain Specification lays out a set of best practices that should be applied across a supply chain for efficient and effective compliance with open source licenses. By completing the Conformance Check, participants are able to confirm they are in compliance with the Specification’s requirements.
+    The OpenChain Specification represents a core set of requirements a quality FOSS compliance program must satisfy. It fosters efficient and effective compliance of open source licenses across the supply chain. By self-certifying, participants are able to confirm they are in compliance with the Specification’s requirements.
     </div>
     <div id="GettingStarted">
     <h2>Getting Started</h2>
