--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -8,6 +8,6 @@
     The Linux Foundation has registered trademarks and uses trademarks. 
     For a list of trademarks of The Linux Foundation, please see our 
     <a href="https://www.linuxfoundation.org/trademark-usage">Trademark Usage</a> page.  
-    Linux is a registered trademark of Linus Torvalds.  <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a> and
-     <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> </p>    
+    Linux is a registered trademark of Linus Torvalds.  <a href="https://www.openchainproject.org/privacy">Privacy Policy</a> and
+     <a href="https://www.openchainproject.org/terms">Terms of Use</a> </p>    
 </div>
