--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,6 +1,6 @@
 <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
 <div id="certifiedlink" class="navlink" style="float:left"><a href="certified.html"><span class="ui-icon ui-icon-check"></span>Conforming Submissions</a>&nbsp;&nbsp;&nbsp;</div> 
-<div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
+<div id="surveylink" class="navlink" style="float:left"></div>
 <div id="adminlink" class="navlink" style="float:left"></div>
 <div id="usermenu" style="float:right;overflow:visible">
     <div id="user-dropdown_container">
