--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,14 +23,14 @@
     </div>
     <div id="GettingStarted">
     <h2>Getting Started</h2>
-    To complete the OpenChain Conformance Check, applicants must provide a self-confirmation. The Conformance Check requires you to:
+    Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:
     <ul>
     <li>Fulfill all requirements set forth in the <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf">Specification.</a></li>
     <li>Create an account by selecting sign-up in the user menu.
     <li>Name a contact person to handle inquiries.</li>
-    <li>Have an authorized representative complete the web-based Conformance Check by answering all the questions.</li>
+    <li>Have an authorized representative complete the web-based Online Self-Certification by answering all the questions.</li>
     <li>Fill out the submission form.</li>
-    <li>Archive a Reference Copy of all Verification Artifacts as a record in support of the Conformance Check.</li>
+    <li>Archive a Reference Copy of all Verification Artifacts as a record in support of the Online Self-Certification.</li>
     </ul>
     </div>
     <div id="errors"></div>
