Move style for form table to style.css per review suggestion
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -38,7 +38,7 @@
     <form>    
         Select the specification version.
         <fieldset>
-            <table style="width: 100%">
+            <table>
                 <tr>
                     <td style="text-align: right; padding: 5px"><label for="versionSelect">Version</label></td>
                     <td style="text-align: left; padding: 5px"><select id="versionSelect"></select></td>
