Partial implementation of browser cache fix
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -3,15 +3,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>OpenChain Self Certification Administration</title>
-    <link rel="stylesheet" href="styles/openchain.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="styles/styles.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="styles/openchain.css?v=1.1.7" type="text/css" media="screen">
+    <link rel="stylesheet" href="styles/styles.css?v=1.1.7" type="text/css" media="screen">
     <link rel="stylesheet" href="resources/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/navbar.js"></script>
-    <script src="resources/admin.js"></script>
+    <script src="resources/navbar.js?v=1.1.7"></script>
+    <script src="resources/admin.js?v=1.1.7"></script>
 </head>
 <body>
     <div class="navbar" id="topnav"></div>
