--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -2,10 +2,27 @@
 <div id="certifiedlink" class="navlink" style="float:left"><a href="certified.html"><span class="ui-icon ui-icon-check"></span>Conforming Submissions</a>&nbsp;&nbsp;&nbsp;</div> 
 <div id="surveylink" class="navlink" style="float:left"></div>
 <div id="adminlink" class="navlink" style="float:left"></div>
-<div id="usermenu" style="float:right;overflow:visible">
-    <div id="user-dropdown_container">
-        <button id="user-dropdown_launcher">User Menu</button>
-    </div>
-    <ul id="user-dropdown_menu">
-    </ul>
+<div id="navbuttons" style="float:right;overflow:visible">
+<table>
+	<tr>
+		<td>
+			<div id="languagemenu">
+			    <div id="language-dropdown_container">
+			        <button id="language-dropdown_launcher">Language</button>
+			    </div>
+			    <ul id="language-dropdown_menu">
+			    </ul>
+			</div>
+		</td>
+		<td>
+			<div id="usermenu" style="float:right;overflow:visible">
+			    <div id="user-dropdown_container">
+			        <button id="user-dropdown_launcher">User Menu</button>
+			    </div>
+			    <ul id="user-dropdown_menu">
+			    </ul>
+			</div>
+		</td>
+	</tr>
+</table>
 </div>
