--- a/WebContent/regfailed.html
+++ b/WebContent/regfailed.html
@@ -2,28 +2,35 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OpenChain Registration Failed</title>
     <link rel="stylesheet" href="styles/openchain.css" type="text/css" media="screen">
     <link rel="stylesheet" href="styles/styles.css" type="text/css" media="screen">
     <link rel="stylesheet" href="resources/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="styles/font-awesome-master/css/font-awesome.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="styles/newstyle.css" type="text/css" media="screen">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
     <script src="resources/navbar.js"></script>
+    <script src="resources/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="navbar" id="topnav"></div>
-    <div id="TitleArea">
-        <h1>Registration Failed</h1>
+    <div class="container">
+	    <div id="TitleArea">
+	        <h1>Registration Failed</h1>
+	    </div>
+	    <div>
+	        Something seems to have gone wrong in the registration.  The registration may have expired.
+	        Please contact the OpenChain team for additional help.
+	    </div>
+	    <div id="errors"></div>
+	    <div id="status"></div>
+	    <div id="resendveify"></div>
     </div>
-    <div>
-        Something seems to have gone wrong in the registration.  The registration may have expired.
-        Please contact the OpenChain team for additional help.
-    </div>
-    <div id="errors"></div>
-    <div id="status"></div>
-    <div id="resendveify"></div>
     <div id="login">
         <form>
             <p class="validateTips"></p>
