--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,28 +1,144 @@
-<div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
-<div id="certifiedlink" class="navlink" style="float:left"><a href="certified.html"><span class="ui-icon ui-icon-check"></span>Conforming Submissions</a>&nbsp;&nbsp;&nbsp;</div> 
-<div id="surveylink" class="navlink" style="float:left"></div>
-<div id="adminlink" class="navlink" style="float:left"></div>
-<div id="navbuttons" style="float:right;overflow:visible">
-<table>
-	<tr>
-		<td>
-			<div id="languagemenu">
-			    <div id="language-dropdown_container">
-			        <button id="language-dropdown_launcher">Language</button>
-			    </div>
-			    <ul id="language-dropdown_menu">
-			    </ul>
+
+	 <script src="resources/lib/CLDRPluralRuleParser/CLDRPluralRuleParser.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.messagestore.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.fallbacks.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.language.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.parser.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.emitter.js"></script>
+	  <script src="resources/lib/jquery.i18n/jquery.i18n.emitter.bidi.js"></script>
+	  <script src="resources/lib/history/jquery.history.js"></script>
+	  <script src="resources/lib/url/url.min.js"></script> 
+	  <script src="resources/global.js"></script> 
+<nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
+	<div class="container container_padding">
+	  <a class="navbar-brand openchain-logo" href="index.html"><img src ="images/logo_openchain.png"></a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarText">
+	    <ul class="navbar-nav mr-auto"></ul>
+	    <span class="navbar-text">
+	    	<ul class="navbar-nav mr-auto">
+	    		  		
+		    	<li class="nav-item active"><a class="nav-link " href="certified.html" > <i class="fa fa-list" aria-hidden="true"></i> <span class="translate" data-args="Comforming Submission">Comforming Submission </span><span class="sr-only">(current)</span></a></li>
+		    	<div id="surveylink"></div>
+				<div id="adminlink"></div>
+			    <li><div><ul id="user-dropdown_menu"></ul></div></li>
+			 	<li class="nav-item active">
+			    <div class="dropdown">
+				  <span><i class="fa fa-language language-setup" aria-hidden="true"></i>  <i class="fa fa-caret-down" aria-hidden="true"></i></span>
+				  <div class="dropdown-content">
+				  	<ul class="language-setup-dropdown">
+					  	<li><a language="en">English (en)</a></li>
+					  	<li><a language="ru">Russian (ru)</a></li>
+					  	<li><a>Spanish (es)</a></li>
+					  	<li><a>French (fr)</a></li>
+					  	<li><a>German (de)</a></li>
+					  	<li><a>Japanese (ja)</a></li>
+					  	<li><a>Chinese (Simplified)</a></li>
+				  	</ul>
+			       </div>
+				</div> 
+		    </li>
+			    
+	      	</ul>
+	    </span>
+	  </div>
+	</div>
+</nav>
+
+<!-- Modal Update Profile -->
+<div class="modal fade" id="updateprofileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update Profile</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name="profile-form" id="profile-form">
+            <p class="validateTips"></p>
+            <div class="row">
+            	<input type="text" class="form-control custom-input update-input" name="update-username" id="update-username"  required>
+		        <label class= "custom-label" for="update-username">Username</label>
 			</div>
-		</td>
-		<td>
-			<div id="usermenu" style="float:right;overflow:visible">
-			    <div id="user-dropdown_container">
-			        <button id="user-dropdown_launcher">User Menu</button>
-			    </div>
-			    <ul id="user-dropdown_menu">
-			    </ul>
+			<div class="row">
+			    <input type="password" class="form-control custom-input" name="update-password" id="update-password"  required>
+		        <label class= "custom-label" for="update-password">Password</label>
 			</div>
-		</td>
-	</tr>
-</table>
+			<div class="row">
+			    <input type="password" class="form-control custom-input" name="update-passwordverify" id="update-passwordverify" required>
+		        <label class= "custom-label" for="update-passwordverify">Re-enter Password</label>
+			</div>
+			<div class="row">
+			    <input type="text" class="form-control custom-input" name="update-name" id="update-name" required>
+		        <label class= "custom-label" for="update-name">Name</label>
+			</div>
+			<div class="row">
+			    <input type="text" class="form-control custom-input" name="update-organization" id="update-organization" required>
+		        <label class= "custom-label" for="update-organization">Organization</label>
+			</div>
+			<div class="row">
+			    <input type="text" class="form-control custom-input" name="update-email" id="update-email" required>
+		        <label class= "custom-label" for="update-email">Email</label>
+			</div>
+			<div class="row">
+			    <textarea rows="3" name="update-address" id="update-address" class="form-control custom-input" form="profile-form" required></textarea>
+			    <label class= "custom-label" for="update-address">Organization Postal Address</label>
+			</div>
+			<div class="row ">
+			    <div class="form-check">
+					<input type="checkbox" name="update-use-name-email" id="update-use-name-email" class="form-check-input" >
+				    <label class="form-check-label custom-lable checkbox-label" for="update-use-name-email">My name and email may be shared on conformance page of the OpenChain website</label>
+				</div>
+			</div>
+		 </form>
+      </div>
+      <div class="modal-footer mr-30">
+        <button type="button" class="btn btn-cancel" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-login" id="update-user-profile">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+<!-- Modal Reset Password -->
+
+<div class="modal fade bd-example-modal-sm" id="resetpasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Reset Password</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name="reset-pw-form" id="reset-pw-form">
+            <p class="validateTips"></p>
+            <div class="row">
+            	<input type="text" class="form-control custom-input update-input" name="reset-username" id="reset-username"  required>
+		        <label class= "custom-label" for="reset-username">Username</label>
+			</div>
+			<div class="row">
+			    <input type="text" class="form-control custom-input" name="reset-email" id="reset-email"  required>
+		        <label class= "custom-label" for="reset-email">Email</label>
+			</div>
+			
+		 </form>
+      </div>
+      <div class="modal-footer mr-30">
+        <button type="button" class="btn btn-cancel" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-login" id="btnresetpassword">Reset Password</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+ 
+ 
