Resolved open issues and ui corrections

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -42,7 +42,7 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <h2 class="sub-heading translate" data-args="gs">Getting Started</h2>
 	    <p class="translate" data-args="apps">Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:</p>
 	    <ul class="mr-100">
-	    <li class="translate" data-args="li1">Fulfill all requirements set forth in the <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf" class="translate" data-args="a">Specification.</a></li>
+	    <li> <span class="translate" data-args="li1">Fulfill all requirements set forth in the </span> <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf" class="translate" data-args="a">Specification.</a></li>
 	    <li class="translate" data-args="li2">Create an account by selecting sign-up in the user menu.
 	    <li class="translate" data-args="li3">Name a contact person to handle inquiries.</li>
 	    <li class="translate" data-args="li4">Have an authorized representative complete the web-based Online Self-Certification by answering all the questions.</li>
