--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -37,7 +37,7 @@ Description: A new Responsive Template for login
 	    <h3 class="text-center sub-heading">Welcome Back</h3>		
 		<div class="form-group">
 			<div class="wrap">
-			    <form>
+				 <form>
 			  		<p class="validateTips"></p>
 				    <div class="row">
 				      <input type="text" class="form-control custom-input" name="login-username" id="login-username" required>
@@ -50,39 +50,23 @@ Description: A new Responsive Template for login
 				    <!-- 002 starts here -->
 				    <div class="row">
 				     	<a data-toggle="modal" data-target="#resetpasswordModal" class="reset-password">Reset Password</a>
-				     </div>
-				    <!-- 002 starts here -->>
+				     </div> 
+				    <!-- 002 starts here -->
 				     <div class="row">
 					     <div class="ui-dialog-buttonset">
-					     	<button type="button" class="btn btn-login btn-md" id="login-button">Login</button>
+					     	<button type="submit" class="btn btn-login btn-md" id="login-button">Login</button>
 					     	<button type="button" class="btn btn-cancel btn-md" id="index-home"  >Cancel</button>
 					     </div>
 				     </div>
 			   </form>
 		   	</div>
 		 </div>
-  
-  
-		
-	    <div id="user-dropdown_signin"></div>
+  	    <div id="user-dropdown_signin"></div>
 	    <div id="errors"></div>
 	    <div id="status"></div>
 	    <div id="resendveify"></div>
     </div>
-        
-      <!--  <div id="reset-password">
-            <form name="reset-pw-form" id="reset-pw-form">
-            <p class="validateTips"></p>
-            <fieldset>
-                <label for="reset-username">Username</label>
-                <input type="text" name="reset-username" id="reset-username" class="text ui-widget-content ui-corner-all">
-                 <label for="reset-email">Email</label>
-                <input type="text" name="reset-email" id="reset-email" class="text ui-widget-content ui-corner-all">
-               Allow form submission with keyboard without duplicating the dialog button
-                <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-            </fieldset>
-        </form>
-    </div> -->
+    
     <div id="footer-outer"></div> 
   </body>
 </html>
