--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -52,7 +52,7 @@ Author(s): ViSolve 03/01/2019
 					    </div>
 					     <div class="row">
 						     <div class="ui-dialog-buttonset">
-						     	<button type="button" class="btn btn-login btn-md" id="reset-user-password">Reset Password</button>
+						     	<button type="submit" class="btn btn-login btn-md" id="reset-user-password">Reset Password</button>
 						     	<button type="button" class="btn btn-cancel btn-md" id="index-home"  >Cancel</button>
 						     </div>
 					     </div>
