--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -90,7 +90,7 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 				    </div>
 				     <div class="row">
 					     <div class="ui-dialog-buttonset">
-					     	<button type="button" class="btn btn-login btn-md" id="signup-button">Sign Up</button>
+					     	<button type="submit" class="btn btn-login btn-md" id="signup-button">Sign Up</button>
 					     	<button type="button" class="btn btn-cancel btn-md" id="index-home">Cancel</button>
 					     </div>
 				     </div>
