--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -21,7 +21,7 @@
 	    <span class="navbar-text">
 	    	<ul class="navbar-nav mr-auto">
 	    		  		
-		    	<li class="nav-item active"><a class="nav-link " href="certified.html" > <i class="fa fa-list" aria-hidden="true"></i> <span class="translate" data-args="Comforming Submission">Comforming Submission </span><span class="sr-only">(current)</span></a></li>
+		    	<li class="nav-item active"><a class="nav-link " href="certified.html" > <i class="fa fa-list" aria-hidden="true"></i> <span class="translate" data-args="Conforming Submission">Conforming Submission </span><span class="sr-only">(current)</span></a></li>
 		    	<div id="surveylink"></div>
 				<div id="adminlink"></div>
 			    <li><div><ul id="user-dropdown_menu"></ul></div></li>
@@ -32,16 +32,10 @@
 				  	<ul class="language-setup-dropdown">
 					  	<li><a language="en">English (en)</a></li>
 					  	<li><a language="ru">Russian (ru)</a></li>
-					  	<li><a>Spanish (es)</a></li>
-					  	<li><a>French (fr)</a></li>
-					  	<li><a>German (de)</a></li>
-					  	<li><a>Japanese (ja)</a></li>
-					  	<li><a>Chinese (Simplified)</a></li>
 				  	</ul>
 			       </div>
 				</div> 
-		    </li>
-			    
+		    </li>  
 	      	</ul>
 	    </span>
 	  </div>
@@ -105,8 +99,6 @@
   </div>
 </div>
 
-
-
 <!-- Modal Reset Password -->
 
 <div class="modal fade bd-example-modal-sm" id="resetpasswordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -133,8 +125,8 @@
 		 </form>
       </div>
       <div class="modal-footer mr-30">
-        <button type="button" class="btn btn-cancel" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-login" id="btnresetpassword">Reset Password</button>
+        <button type="submit" class="btn btn-login" id="btnresetpassword">Reset Password</button>
+        <button type="button" class="btn btn-cancel" data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
